# square

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-old.sh  build-wasm.sh  build-x64-linux.sh  build.sh  index.js  vcpkg-configuration.json  vcpkg.json
client/: CMakeLists.txt  README.md
client/include/: application.h  canvas.h  input.h  log.h  net_transport.h  render.h
client/src/: application.cpp  canvas.cpp  input.cpp  log.cpp  main.cpp  net_transport.cpp  render.cpp
client/web/: index.html  index.js  server.py
include/: application.h  application.hpp  canvas.h  canvas.hpp  event.h  event_dispatch.h  event_listener.hpp  event_notification.hpp  event_notifier.hpp  factory.h  input.h  input.hpp  log.h  net_transport.h  net_transport.hpp  render.h  render.hpp  replication.hpp  types.hpp
overlay-triplets/: custom-wasm32-emscripten.cmake
server/: CMakeLists.txt  README.md
server/include/: net_transport.h  session_manager.h
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/: event.h  event_dispatch.h  log.h
shared/include/shared/: event.h
src/: application.cpp  canvas.cpp  input.cpp  main.cpp  net_transport.cpp  render.cpp
web/: example_js_glue.html  index.html  index.js  script.js
web-minimal/: build.sh  index.html  index.js
